# SDI-11911

./: .gitignore  CMakeLists.txt  CMakeListsS.txt  LigaVideoProy2.txt  Proyecto 2.docx  README.md  README.txt  proy1.tar  script.sh  script2.sh
DiegoPozoProyecto1/: READ_ME.txt
DiegoPozoProyecto1/DiegoPozo_ws/devel/: .catkin  .rosinstall  setup.sh
DiegoPozoProyecto1/DiegoPozo_ws/src/dp_pkg/: CMakeLists.txt  package.xml  run_turtle_run.cpp
Proyecto 1/devel/: .catkin  _setup_util.py
Proyecto 1/devel/lib/turtlesim_proy/: proy_node
Proyecto 1/src/: .cproject
Proyecto 1/src/turtlesim_proy/: .cproject  .project
Proyecto 2/: README.txt
Proyecto 2/src/autonomos_ctrl/: CMakeLists.txt  autonomos_trajectory_node.cpp  autonomos_velocity_node.cpp  package.xml  ros_autonomos.launch
Proyecto 2/src/autonomos_simulation/: perception_node.cpp
Proyecto 2/src/autonomos_simulation/launch/: ros_autonomos.launch
Proyecto 2/src/ekbot_ctrl/: robot_trajectory_node.cpp
Proyecto1/: CMakeLists(SOLOREFERENCIA1).txt  CMakeLists(SOLOREFERENCIA2).txt  Main1.rtf  README.md  README.txt  ejecutable.cpp  etortuga.cpp  metodo_move.cpp  movtur.cpp  script1.rtf  script2.pages  scriptD1.sh  scriptD2.sh  sub.cpp
Proyecto1/132339Magdiel/: CMakeLists.txt  README.md  magdiel.cpp  package.xml
Proyecto1/wsros/src/agitr/: CMakeLists.txt  hello.cpp  moveto.cpp  package.xml  pubvel.cpp  subpose.cpp
Proyecto1_145797/: README.txt
Proyecto1_145797/AperezBar/devel/: .catkin  .rosinstall  setup.sh
Proyecto1_145797/AperezBar/src/proyecto1/: CMakeLists.txt  Proyecto1.cpp
Proyecto2/: .gitignore  exi  history
Proyecto2/Nodos/: CMakeLists.txt  a_robot_velocity_node.cpp  autonomos_ctrl_node.cpp  perception_node.cpp  tf2_broadcaster_node.cpp  vision_node.cpp
Proyecto2/src/: DisplayImage.cpp
Proyecto2/src/autonomos_carro/: CMakeLists.txt  auto_trajectory_node.cpp  auto_velocity_node.cpp
Proyecto2/src/autonomos_ctrl/: .CMakeLists.txt.swp  CMakeLists.txt  DisplayImage.cpp  auto_lidar_node.cpp  auto_trajectory_node.cpp  auto_trajectory_node_VelLalo.cpp  auto_velocity_node.cpp  laser_scan_publisher.cpp  package.xml
Proyecto2/src/autonomos_ctrl/launch/: ros_autonomos.launch
Proyecto2/src/autonomos_gazebo/AutoNOMOS_mini/: model.sdf
Proyecto2/src/autonomos_gazebo/AutoNOMOS_straight_road/: model.sdf
Proyecto2/src/autonomos_gazebo/launch/: simple.launch
Proyecto2/src/autonomos_gazebo/worlds/: curved_road.world  simple.world  straight_road.world
Proyecto2/src/autonomos_simulation/: CMakeLists.txt  auto_trajectory_node.cpp  auto_trajectory_node_follow.cpp  auto_velocity_node.cpp  auto_velocity_node_follow.cpp  autonomus.cpp  perception_node.cpp  vision_node.cpp
Proyecto2/src/autonomos_vision/: CMakeLists.txt  DisplayImage.cpp  package.xml
Proyecto2/src/imagen/: CMakeLists.txt  DisplayImage.cpp  mostrar.cpp  package.xml  proyeccionCarlos.cpp
Proyecto2/src/vision/: CMakeLists.txt  DisplayImage.cpp  package.xml
devel/: .rosinstall  setup.sh
devel/lib/pkgconfig/: turtlesim_proy.pc
documento/: README.MD
proyecto1/: CMakeLists.txt  package.xml  poseUsr.cpp
proyecto2/código/: a_robot_velocity_node.cpp  autonomos_ctrl_node.cpp  perception_node.cpp  tf2_broadcaster_node.cpp  vision_node.cpp
src/: .project
src/turtlesim_proy/: CMakeLists.txt  readme.txt
src/turtlesim_proy/src/: robot.cpp
(+8 files in other folders)
